Fix pinned tab close button and reduce spacing at end of tabbar

--- a/userChrome.css
+++ b/userChrome.css
@@ -231,12 +231,17 @@ menupopup > menu {
 }
 
 /* always show 'close tab icon' */
-.tabbrowser-tab:not([pinned="true"]) > .tab-stack > .tab-content > .tab-close-button:not([selected="true"]) {
+.tabbrowser-tab:not([pinned]) > .tab-stack > .tab-content > .tab-close-button:not([selected="true"]) {
   display: initial !important;
 }
 
-/*Varse-> Padding of the sides of navbar*/ 
+/* Varse-> Padding of the sides of navbar*/ 
 #nav-bar {
   padding-left: 1rem !important;
   padding-right: 1rem !important
+}
+
+/* Varse-> reduce space between tabs and window controls, keep a little space to be able to grab the window. */
+.titlebar-spacer[type="post-tabs"] {
+  width: 1rem;
 }
